[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "adventurebuddy"
description = "Qt-based RPG Toolkit"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "PySide6",
]
license = { file = "LICENSE" }
maintainers = [
  { name = "Peyton Murray", email = "peynmurray@gmail.com" },
]

[tool.setuptools]
packages = ["adventurebuddy"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[project.optional-dependencies]
dev = ["pre-commit", "ruff-lsp", "python-lsp-server"]

[project.scripts]
adventurebuddy = "adventurebuddy:run"
